--- a/addRecipe.html
+++ b/addRecipe.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Daksh's Recipes</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,24 +11,31 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./component.css">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #212121;">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="./index.html" style="color: #c1a362; font-size: 1.7rem; letter-spacing: 1px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#c1a362" class="mb-2 bi bi-book-half me-2" viewBox="0 0 16 16">
+                        <path d="M8.5 2.5v11l.5-.5.5.5v-11l-.5.5-.5-.5z"/>
+                        <path d="M2 2.5A1.5 1.5 0 0 1 3.5 1h9A1.5 1.5 0 0 1 14 2.5v11A1.5 1.5 0 0 1 12.5 15h-9A1.5 1.5 0 0 1 2 13.5v-11zm1.5-.5A.5.5 0 0 0 3 2.5v11a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-11a.5.5 0 0 0-.5-.5h-9z"/>
+                    </svg>
+                    Daksh's Recipe Book
+                </a>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav gap-2">
                         <li class="nav-item">
-                            <a class="nav-link active" href="./index.html">Recipes</a>
+                            <a class="nav-link rounded-pill px-3"  href="./index.html" style="color: #c1a362;">Recipes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="./addRecipe.html" aria-current="page">Add new Recipes</a>
+                            <a class="nav-link active rounded-pill px-3" aria-current="page" href="./addRecipe.html"  style="color: #fff; background: #c1a362;">Add New Recipe</a>
                         </li>
                     </ul>
                 </div>
@@ -49,6 +56,10 @@
                     <input type="text" class="form-control" id="image" required></input>
                 </div>
                 <div class="mb-3">
+                    <label for="cuisine" class="form-label">Cuisine Type</label>
+                    <input type="text" class="form-control" id="cuisine" required></input>
+                </div>
+                <div class="mb-3">
                     <label for="ingredients" class="form-label">Ingredients</label>
                     <textarea class="form-control" id="ingredients" rows="3" required></textarea>
                 </div>
@@ -56,7 +67,7 @@
                     <label for="instructions" class="form-label">Instructions</label>
                     <textarea class="form-control" id="instructions" rows="5" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Add Recipe</button>
+                <button type="submit" class="btn button">Add Recipe</button>
             </form>
         </div>
     </main>
