--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Daksh's Recipes</title>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -15,20 +15,26 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        <nav class="navbar navbar-expand-lg shadow-sm" style="background-color: #212121;">
+            <div class="container">
+                <a class="navbar-brand fw-bold" href="./index.html" style="color: #c1a362; font-size: 1.7rem; letter-spacing: 1px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="#c1a362" class="mb-2 bi bi-book-half me-2" viewBox="0 0 16 16">
+                        <path d="M8.5 2.5v11l.5-.5.5.5v-11l-.5.5-.5-.5z"/>
+                        <path d="M2 2.5A1.5 1.5 0 0 1 3.5 1h9A1.5 1.5 0 0 1 14 2.5v11A1.5 1.5 0 0 1 12.5 15h-9A1.5 1.5 0 0 1 2 13.5v-11zm1.5-.5A.5.5 0 0 0 3 2.5v11a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5v-11a.5.5 0 0 0-.5-.5h-9z"/>
+                    </svg>
+                    Daksh's Recipe Book
+                </a>
+                <button class="navbar-toggler border-0 bg-body" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav gap-2">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Recipies</a>
+                            <a class="nav-link active rounded-pill px-3" aria-current="page" href="./index.html" style="color: #fff; background: #c1a362;">Recipes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./addRecipe.html">Add new Recipies</a>
+                            <a class="nav-link rounded-pill px-3" href="./addRecipe.html" style="color: #c1a362;">Add New Recipe</a>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +44,12 @@
     <main>
         <div class="container text-center mt-5">
             <h1>Recipe Book</h1>
-            
+            <div class="row justify-content-center mb-4">
+                <div class="col-md-6">
+                    <input type="text" id="searchInput" class="form-control"
+                        placeholder="Search recipes by name, ingredient, or cuisine...">
+                </div>
+            </div>
             <div class="row mt-4" id="recipeList">
             </div>
         </div>
